<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp_otp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_4_digit_code_sent_to_your_number_opt"
        android:textSize="16sp"
        android:textColor="@color/colorTextSecondary"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:inputType="number"
            android:maxLength="4"
            android:gravity="center"
            android:letterSpacing="1.0"
            android:textSize="24sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/verify_amp_proceed_opt"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary"
        app:cornerRadius="8dp" />
</LinearLayout>